--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,10 @@
     -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <title>React App</title>
+
+    <!--Bootstrap icon source-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
